--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
     <title>Gallery page</title>
 </head>
 <body>
-     <h1>Lisah's Sprinkled Cottage</h1>
+     <h1>LISAH’S SPRINKLED COTTAGE</h1>
+     <H2>Where you'll meet your Love at first Bite!</H2>
     <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About Us</a>
@@ -16,7 +17,7 @@
           <a href="contact.html">Contact Us</a>
           <h2>Our Gallery</h2>
 
-  <h2>Cakes( Celebrations/ Events)</h2>
+  <h3>Cakes( Celebrations/ Events)</h2>
   <p><img src="_images/strawberry cake.jpeg" alt="Strawberry Cake" width="250"><br>Strawberry Drip Cake – perfect for summer birthdays.</p>
   <p><img src="_images/chocolate cake.jpeg" alt="Chocolate Cake" width="250"><br>Rich Chocolate Celebration Cake.</p>
   <p><img src="_images/wedding cake1.jpeg" alt="Wedding Cake" width="250"><br>Elegant Wedding Cake with floral decorations.</p>
@@ -49,8 +50,7 @@
   <p><img src="_images/macaroons.jpeg" alt="macaroons" width="200"><br>Specialty Macaroons for various occasions.</p>
   
 
-  <p><button onclick="location.href='menu.html'">View Our Menu</button></p>
-  <p><button onclick="location.href='order.html'">Order Now</button></p>
+  <h4>Our Location: 117 DaVinci Avenue & 645 Park Avenue Estate, Musgrave</h4>
   <h2>Contact us:</h2>
   <img src="_images/instagram image.jpeg" alt="instagram Icon" width="50px">
   <img src="_images/twitter image.jpeg" alt="twitter Icon" width="50px">
@@ -58,3 +58,5 @@
 
 </body>
 </html>
+
+CODE ATTRIBUTIONS: 
