--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       <a href="about.html">About Us</a>
       <a href="menu.html">Menu</a>
       <a href="gallery.html">Gallery</a>
-      <a href="order.html">Order Now</a>
+      <a href="Reviews.html">Reviews</a>
       <a href="contact.html">Contact Us</a>
+
+      
        
     </nav>
   </header>
