added code attributions

--- a/about.html
+++ b/about.html
@@ -6,22 +6,36 @@
     <title>About us page</title>
 </head>
 <body>
-      </nav>
-  <h1>LISAH'S SPRINKLED COTTAGE</h1>
 
 
-    <h2>Where you'll meet your Love at First Bite!</h2>
-  
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="menu.html">Menu</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="order.html">Order Now</a>
-      <a href="contact.html">Contact Us</a>
+    <header>
+        <h1>LISAH'S SPRINKLED COTTAGE</h1>
+        <h2>Where you'll meet your Love at First Bite!</h2>
+
+  </header>
+  <nav>
+  <ul>
+     
+    <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+<header>
+  <!-- Code Attribution
+
+    Title: Semantic Elements
+    Author: HTML and CSS Guidebook
+    Date: 25 August 2025
+    Version: Not specified
+    Availability: https://htmlandcssguidebook.com/html/html5-semantic/#section
+-->
+   
        
-    </nav>
-    <img src="_images/bakery interior.jpeg" alt="Bakery Image" style="width:600px;height: 550px;;">
+        <img src="_images/bakery interior.jpeg" alt="Bakery Image" style="width:600px;height: 550px;;">
+
     <h2>About Us</h2>
     <p>LISAH’S SPRINKLED COTTAGE aims to create a welcoming space where fresh and organically baked treats inspire smiles, celebrate life moments and strengthen the community. We strive to be the heart of the community. We want LISAH’S SPRINKLED COTTAGE to be a shared space where everyone feels at home.We offer flavourful, freshly baked cakes, brownies and so much more, handcrafted with care, using purely organic ingredients. We offer warm hospitality, creativity and a “sprinkle” of love in every bite.</p>
   <h3>My Story</h3>
@@ -65,3 +79,13 @@ Baking is more than a business to me; it's a way to connect with people, celebra
     <img src="_images/instagram image.jpeg" alt="Instagram Logo" style="width:30px;height:30px;">    <img src="_images/facebook image.jpeg" alt="Facebook Logo" style="width:30px;height:30px;">    <img src="_images/twitter image.jpeg" alt="Twitter Logo" style="width:30px;height:30px;">
 </body>
 </html>
+<footer>
+  <!-- Code Attribution
+
+    Title: Semantic Elements
+    Author: HTML and CSS Guidebook
+    Date: 25 August 2025
+    Version: Not specified
+    Availability: https://htmlandcssguidebook.com/html/html5-semantic/#section
+-->
+    <p>&copy; 2024 Lisah's Sprinkled Cottage. All rights reserved.</p>
