--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,27 @@
 <body>
     <h1>LISAH'S SPRINKLED COTTAGE</h1>
     <h2>Where you'll meet your Love at First Bite!</h2>
-    <nav>
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="menu.html">Menu</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="order.html">Order Now</a>
-          <a href="contact.html">Contact Us</a>
-    </nav>
+    
+     </header>
+     <!-- Code Attribution
+
+    Title: Semantic Elements
+    Author: HTML and CSS Guidebook
+    Date: 25 August 2025
+    Version: Not specified
+    Availability: https://htmlandcssguidebook.com/html/html5-semantic/#section
+-->
+  <nav>
+  <ul>
+    
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+<header>
 
 
 
@@ -61,7 +74,7 @@
 
 <h3>Holiday schedule</h3>
 <p>Closed on public holidays.</p>
-<p>Festive season (15–24 December): Extended hours 08:00am – 19:00pm. <!-- Adjust to your real schedule --></p>
+<p>Festive season (15–24 December): Extended hours 08:00am – 19:00pm.</p>
 </section>
 </div>
 </main>
@@ -70,13 +83,5 @@
 <footer>
 <small>&copy; <span id="year"></span> LISAH'S SPRINKLED COTTAGE. All rights reserved.</small>
 </footer>
-
-
-<script>
-// Simple year updater
-document.getElementById('year').textContent = new Date().getFullYear();
-</script>
-</body>
-</html>
 </body>
 </html>
