--- a/gallery.html
+++ b/gallery.html
@@ -9,12 +9,22 @@
      <h1>LISAH’S SPRINKLED COTTAGE</h1>
      <H2>Where you'll meet your Love at first Bite!</H2>
     <nav>
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="menu.html">Menu</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="order.html">Order Now</a>
-          <a href="contact.html">Contact Us</a>
+      <ul>
+          <li><a href="index.html">Home</a>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+    <!-- Code Attribution
+
+    Title: Semantic Elements
+    Author: HTML and CSS Guidebook
+    Date: 25 August 2025
+    Version: Not specified
+    Availability: https://htmlandcssguidebook.com/html/html5-semantic/#section
+-->
           <h2>Our Gallery</h2>
 
   <h3>Cakes( Celebrations/ Events)</h2>
@@ -55,8 +65,9 @@
   <img src="_images/instagram image.jpeg" alt="instagram Icon" width="50px">
   <img src="_images/twitter image.jpeg" alt="twitter Icon" width="50px">
   <img src="_images/facebook image.jpeg" alt="facebook Icon" width="50px">
-
+<footer>
+<small>&copy; <span id="year"></span> LISAH'S SPRINKLED COTTAGE. All rights reserved.</small>
+</footer>
 </body>
 </html>
 
-CODE ATTRIBUTIONS: 
