--- a/menu.html
+++ b/menu.html
@@ -6,17 +6,32 @@
     <title>Menu page</title>
 </head> 
 <body>
+  
     
   <h1>Lisah's Sprinkled Cottage</h1>
-  <h2>Where you'll meet your Love at first Bite!</h2>
-   <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="menu.html">Menu</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="Reviews.html">Reviews</a>
-        <a href="contact.html">Contact Us</a>
-  <h1>Our Delicious Menu!</h1>
+  <h2>Where you'll meet your Love at First Bite!</h2>
+   <header>
+    <!-- Code Attribution
+
+    Title: Semantic Elements
+    Author: HTML and CSS Guidebook
+    Date: 25 August 2025
+    Version: Not specified
+    Availability: https://htmlandcssguidebook.com/html/html5-semantic/#section
+-->
+  <h2>Our Delicious Menu!</h2>
+   </header>
+  <nav>
+    
+  <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+<header>
   
   <h2>Pastries</h2>
   <p><b>Butter Croissant</b> - R32,50<br>Flaky and buttery croissant baked fresh daily.</p>
